# wmp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  mpsc1.cpp  oneshot1.cpp  oneshot2.cpp  watch1.cpp
include/wmp/: bus.hpp  mpsc.hpp  oneshot.hpp  watch.hpp
include/wmp/detail/: scoped_srw.hpp  srw_acquire.hpp  unique_srw.hpp
test/: CMakeLists.txt  catch_main.cpp
test/src/: mpsc.cpp  oneshot.cpp  watch.cpp
